# acari

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  build.rs  cliff.toml  dist-workspace.toml  project-structure.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  prepare-release.yml  release-binaries.yml
docs/: architecture.md  decisions.md  env.md  glossary.md  releasing.md  security.md
scripts/: install.sh  start-task.sh
src/: config.rs  i18n.rs  lib.rs  main.rs
src/application/: cleaner.rs  commands.rs  mod.rs  scanner.rs
src/application/headless/: mod.rs  output.rs
src/config/: target_config.rs
src/domain/: custom_targets.rs  format.rs  messages.rs  mod.rs  models.rs  project_scan.rs  targets.rs
src/infrastructure/: cleaner.rs  distro.rs  history.rs  mod.rs  scanner.rs
src/ui/: app.rs  mod.rs  project.rs
tests/: app_flow.rs  cli.rs
