[package]
name = "acari"
version = "0.3.3"
edition = "2024"
default-run = "acari"
repository = "https://github.com/lucaswilliameufrasio/acari"
authors = ["Lucas Eufrasio"]
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
dirs = "6.0"
jwalk = "0.8"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "sync", "time"] }
toml = "0.8"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
